--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,14 +1,8 @@
-// {
-//   "extends": "@docusaurus/tsconfig",
-//   "compilerOptions": {
-//     "baseUrl": "."
-//   }
-// }
-
 {
   "extends": "@docusaurus/tsconfig",
   "compilerOptions": {
-    "baseUrl": "."
+    "baseUrl": ".",
+    "resolveJsonModule": true,
+    "esModuleInterop": true
   }
 }
-
